--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -28,4 +28,5 @@ jobs:
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
         run: |
           export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt clean jacoco jacocoCoveralls  
+          sbt clean coverage test
+          sbt coverageReport
