--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -23,9 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build and export Coverage
+        run: sbt coverageReport coveralls
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
-        run: |
-          sbt coverageReport coveralls
-          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
