--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build and export Coverage
         run: sbt coverageReport coveralls
+          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
