--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build and export Coverage
         run: | 
           export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt coverageReport
-          sbt coveralls
+          sbt coverageAggregate
+          sbt coverageReport coveralls
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
