--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Build and export Coverage
         run: | 
           export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt coverageAggregate
-          sbt coverageReport coveralls
+          sbt coveralls
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
