--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches: [main]
 jobs:
+  
   build:
     runs-on: ubuntu-latest
     steps:
@@ -18,14 +19,14 @@ jobs:
       run: sbt compile
     - name: run tests
       run: sbt test
+  
   run_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build and export Coverage
-        run: | 
-          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt coveralls
+        run:
+          sbt coverageReport coveralls
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
           COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
