--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -4,28 +4,36 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin'
+        distribution: 'adopt'
         cache: 'sbt'
-    - name: Run tests
+    - name: compile
+      run: sbt compile
+    - name: run tests
       run: sbt test
-    - name: Coveralls
+
+
+  run_tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: 'sbt'
+    - name: run tests
+      run: sbt test
+    - name: create report
       run: sbt clean coverage test coverageReport
-    - name: Upload coveralls
+    - name: upload
       run: sbt coverageReport coveralls
