--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env: 
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,12 +17,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        cache: 'sbt'
     - name: compile
       run: sbt compile
-    - name: run tests
-      run: sbt test
-
 
   run_tests:
     runs-on: ubuntu-latest
@@ -30,12 +29,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        cache: 'sbt'
     - name: run tests
       run: sbt test
     - name: create report
       run: sbt clean coverage test coverageReport
     - name: upload
-      env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      
       run: sbt coverageReport coveralls
