--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env: 
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+env:
+  COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       
 jobs:
   build:
