--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -30,6 +30,7 @@ jobs:
         distribution: 'adopt'
     - name: run tests
       env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: 
         sbt clean coverage test coverageReport coveralls
