--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -28,7 +28,6 @@ jobs:
         distribution: 'adopt'
     - name: run tests
       env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        COVERALLS_REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
       run: 
         sbt clean coverage test coverageReport coveralls
