--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -3,7 +3,10 @@ on:
     branches: [ "main", "AhmedBranch", "globuli94", "Test_Difficulty"]
   pull_request:
     branches: [ "main" ]
-      
+
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,20 +17,26 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: compile
+        cache: 'sbt'
+    - name: Compile
       run: sbt compile
-
-  run_tests:
+    - name: Run tests
+      run: sbt test
+  run-tests:
+    name: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '19'
         distribution: 'adopt'
-    - name: run tests
+        cache: 'sbt'
+    - name: Run Tests
+      run: sbt clean coverage test
+    - name: Upload coverage report
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: 
-        sbt clean coverage test coverageReport coveralls
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: sbt coverageReport coveralls -Dcoveralls.service_name=github -Dcoveralls.service_job_id=${{ github.run_id }}
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v2.2.3
